--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="dont_show_again">Don\'t show this again</string>
     <string name="install_known_issue">There seems to be a known issue (\"%s\") with your ROM. Installing Xposed might not work or lead to severe problems. Click here for details about the issue.</string>
     <string name="installer_needs_update">%1$s needs to be updated</string>
-    <string name="known_issue_wrong_base_directory">wrong base directory</string>
+    <string name="known_issue_wrong_base_directory">wrong base directory: %1$s</string>
     <string name="known_issue_missing_base_directory">missing base directory</string>
     <string name="framework_active">Xposed Framework version %s is active.</string>
     <string name="framework_not_active">Xposed Framework version %s is installed, but not active. Please check the logs for details.</string>
