--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -36,7 +36,7 @@
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is nog niet geactiveerd</string>
-    <string name="module_is_not_activated_yet_detailed">%s werdt geinstalleerd, maar is nog niet geactiveerd.</string>
+    <string name="module_is_not_activated_yet_detailed">%s werd geïnstalleerd, maar is nog niet geactiveerd.</string>
     <string name="activate_and_reboot">Activeer en herstart</string>
     <string name="module_activated">Xposed module is geactiveerd</string>
     <string name="module_empty_description">(geen beschrijving beschikbaar)</string>
